# automata_games

./: CHANGELOG.md  automata-games.cabal
app/: Main.hs
