cabal-version:      2.4
name:               automata-games
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Viktor Diezel
maintainer:         viktor.diezel@posteo.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable automata-games
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        sdl2,
        sdl2-ttf,
        linear,
        array,
        mtl,
        random,
        base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
